# mosib-release

./: CMakeLists.txt  README.md
run/: run_global_app.cpp  run_global_exact.cpp  run_local_exact.cpp  run_local_exact_ablation.cpp
src/: bigraph.cpp  bigraph.h  global.h  mosib.cpp  mosib.h  util.cpp  util.h
